--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/utils": "^4.5.6"
   },
   "dependencies": {
+    "@strapi/utils": "^4.6.0",
     "immer": "^9.0.12",
     "prop-types": "^15.8.1",
     "qs": "^6.10.3",
